--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2013\DRR2013_FutureNoCC_082913\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_1\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2013\DRR2013_FutureNoCC_082913\CONV\DSS\DRR2013_FutureNoCC_20130829_DV.dss
-SvarFile           D:\DRR2013\DRR2013_FutureNoCC_082913\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2013\DRR2013_FutureNoCC_082913\\
+DvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_1\CONV\DSS\CS_BO_1_Rice_DV.dss
+SvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_1\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_1\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2013\DRR2013_FutureNoCC_082913\common\DSS\2020D09EINIT.DSS
+InitFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_1\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
