--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_3\CONV\Run\mainCONV_SA_noSJRR.wresl
+MainFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\CONV\Run\mainCONV_SA_noSJRR.wresl
 Solver             XA
-DvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_3\CONV\DSS\CS_BO_3_SJR_DV.dss
-SvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_3\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_3\\
+DvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\CONV\DSS\CS_BO_4_Misc_DV.dss
+SvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_3\common\DSS\2020D09EINIT.DSS
+InitFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
