--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\CONV\Run\mainCONV_SA_noSJRR.wresl
+MainFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\CONV\DSS\CS_BO_4_Misc_DV.dss
-SvarFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\\
+DvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\CONV\DSS\test2020D09EDV.dss
+SvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\common\DSS\2020D09ESV.dss
+GroundwaterDir     C:\WRIMSVersions\WRIMS2_GUIIDE_20141001\WRIMS2_GUIIDE_20141001\workspace\DCR2015_Base_FNC_CQ_updates_120414\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\CalSim\COA_ReNegotiation\Baselines\BO\DRR2013_FutureNoCC_082913_4\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
