Remand Changes to SJR and VAMP
- The Vernalis Adaptive Management Program (VAMP), developed to protect
migrating juvenile Chinook salmon  through a combination of pulse flows
and Delta export reduction, is considered to have expired.

- Tuolumne River, New Don Pedro operations

--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\CONV\DSS\test2020D09EDV.dss
-SvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\common\DSS\2020D09ESV.dss
-GroundwaterDir     C:\WRIMSVersions\WRIMS2_GUIIDE_20141001\WRIMS2_GUIIDE_20141001\workspace\DCR2015_Base_FNC_CQ_updates_120414\\
+DvarFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\CONV\DSS\CVP_AMR_changes_2020D09EDV.dss
+SvarFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_CQ_updates_120414\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
