Remand Changes to EBMUD, Fremont Weir
Allocation and Cumulative year-based diversion limits based for EBMUD
have been removed.  Dynamic rice decomposition demands.

--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\CONV\DSS\CVP_AMR_changes_2020D09EDV.dss
-SvarFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\\
+DvarFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\CONV\DSS\DCR_2015_BASE_DV.dss
+SvarFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR\2015_DRR_Studies\DCR_2015_Base_Development\1_DCR2015_Base_FutureNoCC_CQ_AA_updates_120914\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
