--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\CONV\DSS\DCR_2015_BASE_DV.dss
-SvarFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\\
+DvarFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\CONV\DSS\2020D09EDV.dss
+SvarFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\common\DSS\2020D09ESV.dss
+GroundwaterDir     C:\WRIMSVersions\WRIMS2_GUIIDE_20141202\workspace\DCR2015_Base_draft_FutureNoCC_121214\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\DRR2015_Base_Study_Dev\1c_DCR2015_Base_FutureNoCC_CQ_AA_RHupdates_120914\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
