DCR2015_Base_FutureNoCC_20141230
-Remove Fremont Weir Notch
[Decided that FRE Weir Notch should not be in the base study, as it in
in the Remand study]
-Added revised SWP NOD Settlement
[Added code from Hao]

1_DCR2015_Base_FutureNoCC_123014

--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\CONV\DSS\2020D09EDV.dss
-SvarFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\common\DSS\2020D09ESV.dss
-GroundwaterDir     C:\WRIMSVersions\WRIMS2_GUIIDE_20141202\workspace\DCR2015_Base_draft_FutureNoCC_121214\\
+DvarFile           D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\CONV\DSS\DCR2015_base_NOD_Settlement_FREWoff_DV
+SvarFile           D:\DRR2015\BDCP_Alt_4\4abcd_DCR2015_FREW_IF_OMR_RV\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\1_DCR2015_Base_draft_FutureNoCC_121214\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\BDCP_Alt_4\4abcd_DCR2015_FREW_IF_OMR_RV\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
