--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\CONV\DSS\DCR2015_base_NOD_Settlement_FREWoff_DV
-SvarFile           D:\DRR2015\BDCP_Alt_4\4abcd_DCR2015_FREW_IF_OMR_RV\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2015\BDCP_Alt_4\1_DCR2015_Base_FutureNoCC_121214\\
+DvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\CONV\DSS\DCR2015_base_newWSIDI_DV
+SvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\BDCP_Alt_4\4abcd_DCR2015_FREW_IF_OMR_RV\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
