DCR2015_Base_FutureNoCC_20150116
WSI-DI Fix; Added B2 actions to mainCONVWSI, regenerated WSI-DI Curves

[Edited the manCONVWSI to include B2 actions; this is consistent with
the Remand study]

DCR2015_Base_FutureNoCC_20150116

--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\CONV\DSS\DCR2015_base_newWSIDI_DV
-SvarFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\\
+DvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\CONV\DSS\DCR2015_base_20150116_wsiDI_retrain_DV
+SvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\1_DCR2015_Base_FutureNoCC_123014_WSIDI\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
