DCR2015_Base_FutureNoCC_20150127
Incorporated Dynamic Rice Decomposition code from MBK LTWT_021814 Study

[Decrease Rice DCMP allocations when Oroville is low]

DCR2015_Base_FutureNoCC_20150127

--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\CONV\Run\mainCONV_SA.wresl
+MainFile           C:\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150127_dynDCMP\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\CONV\DSS\DCR2015_base_20150116_wsiDI_retrain_DV
-SvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\\
+DvarFile           C:\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150127_dynDCMP\CONV\DSS\DCR2015_base_20150127_dynDCMP_DV
+SvarFile           C:\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150127_dynDCMP\common\DSS\2020D09ESV.dss
+GroundwaterDir     C:\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150127_dynDCMP\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150116_WSIDI_retrain\common\DSS\2020D09EINIT.DSS
+InitFile           C:\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150127_dynDCMP\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
