--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\_Base\1_DCR2015_Base_FutureNoCC_rd_fms_sjrr_20150129\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\_Base\1_DCR2015_Base_FutureNoCC_rd_fms_sjrr_20150129\CONV\DSS\DCR2015_rd_fms_sjrr_20150129_DV.dss
-SvarFile           D:\DRR2015\_Base\1_DCR2015_Base_FutureNoCC_rd_fms_sjrr_20150129\common\DSS\2020D09ESV.dss
-GroundwaterDir     C:\WRIMSVersions\WRIMS2_GUIIDE_20141202\workspace\1_DCR2015_Base_FutureNoCC_rd_fms_sjrr_20150129\\
+DvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\CONV\DSS\DCR2015_base_20150204_3k_4k_DV
+SvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\_Base\1_DCR2015_Base_FutureNoCC_rd_fms_sjrr_20150129\common\DSS\2020D09EINIT.DSS
+InitFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
