--- a/CONV/__study.config
+++ b/CONV/__study.config
@@ -9,14 +9,14 @@
 ##################################################################################
 
 
-MainFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\CONV\Run\mainCONV_SA.wresl
+MainFile           D:\_WSIDI_Offset_Sensitivity\GROUP6\1_DCR2015_Base_FutureNoCC_20150218_1.2_Offset\CONV\Run\mainCONV_SA.wresl
 Solver             XA
-DvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\CONV\DSS\DCR2015_base_20150204_3k_4k_DV
-SvarFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\common\DSS\2020D09ESV.dss
-GroundwaterDir     D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\\
+DvarFile           D:\_WSIDI_Offset_Sensitivity\GROUP6\1_DCR2015_Base_FutureNoCC_20150218_1.2_Offset\CONV\DSS\DCR2015_base_20150218_1.2Offset_DV
+SvarFile           D:\_WSIDI_Offset_Sensitivity\GROUP6\1_DCR2015_Base_FutureNoCC_20150218_1.2_Offset\common\DSS\2020D09ESV.dss
+GroundwaterDir     D:\_WSIDI_Offset_Sensitivity\GROUP6\1_DCR2015_Base_FutureNoCC_20150218_1.2_Offset\\
 SvarAPart          CALSIM
 SvarFPart          2020D09E
-InitFile           D:\DRR2015\DCR_Studies\1_DCR2015_Base_FutureNoCC_20150204_3000-4000\common\DSS\2020D09EINIT.DSS
+InitFile           D:\_WSIDI_Offset_Sensitivity\GROUP6\1_DCR2015_Base_FutureNoCC_20150218_1.2_Offset\common\DSS\2020D09EINIT.DSS
 InitFPart          2020D09E
 TimeStep           1MON
 StartYear          1921
